--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,13 @@
   </head>
 
   <body>
+
+    <form method="POST" action="/api/users/:id">
+      <input type="submit" value="Sign In">
+      <input name="username" type="text" placeholder="Username">
+    </form>
+
     <h1>Hello World!</h1>
+
   </body>
 </html>
