Changes made to app.locals

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     </form>
 
     <h1>Hello World!</h1>
-    <div><h3><%= currentUser %></h3>
+    <div><h3><%= username %></h3>
 
   </body>
 </html>
