--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,20 +6,21 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
-
-    <form method="POST" action="/api/users/:id">
+    <% include ./partials/_navbar %>
+    <!-- <form method="POST" action="/api/users/:id">
       <input type="submit" value="Sign In">
       <input name="username" type="text" placeholder="Username">
     </form>
 
     <h1>Hello World!</h1>
-    <div><h3><%= username %></h3>
+    <div><h3><%= username %></h3> -->
 
   </body>
 </html>
