--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
     <link rel="stylesheet" href="/styles/nav.css" type="text/css">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -21,6 +26,7 @@
 
     <h1>Hello World!</h1>
     <div><h3><%= username %></h3> -->
-
+   <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </body>
 </html>
