--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,13 +1,15 @@
 <nav class="navbar">
-  <h1>Hello, <%= username %></h1>
+  <h1>GOPS</h1>
+
+  <% if (!username) { %>
   <form method="POST" action="/api/users/:id">
-    <input type="submit" value="Sign In">
     <input name="username" type="text" placeholder="Username">
+    <input type="submit" value="Sign In">
   </form>
+  <% } %>
   <% if (username) { %>
-    <div>
-        <a href="/urls/new">Start A New Game</a>
-    </div>
+      <h2>Hello, <%= username %></h2>
+      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
   <% } %>
 </nav>
 
