Registered users can log in

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
   <body>
 
-    <form method="POST" action="/api/users/:id">
+    <form method="POST" action="/api/users/">
       <input type="submit" value="Sign In">
       <input name="username" type="text" placeholder="Username">
     </form>
