--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,9 +2,12 @@
   <h1>GOPS</h1>
 
   <% if (!username) { %>
-    <form method="POST" action="/api/users/">
-      <input type="submit" value="Sign In">
-      <input name="username" type="text" placeholder="Username">
+    <form method="POST" action="/api/users/:id">
+        <input name="username" type="text" placeholder="Username">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Sign In
+    <i class="material-icons right">send</i>
+  </button>
+
     </form>
   <% } %>
 
