--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,7 +2,7 @@
   <h1>GOPS</h1>
 
   <% if (!username) { %>
-    <form method="POST" action="/api/users/:id">
+    <form method="POST" action="/api/users/">
         <input name="username" type="text" placeholder="Username">
       <button class="btn waves-effect waves-light" type="submit" name="action">Sign In
     <i class="material-icons right">send</i>
@@ -18,5 +18,3 @@
       <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
   <% } %>
 </nav>
-
-
