Sessions now working properly

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -14,7 +14,7 @@
 
 
   <% if (username) { %>
-      <h2>Hello, <%= username %></h2>
+      <h2>Hello, <%= username.name %></h2>
       <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
   <% } %>
 </nav>
