--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,17 +2,18 @@
   <h1>GOPS</h1>
 
   <% if (!user) { %>
-    <form method="POST" action="/api/users/">
+    <form method="POST" action="/api/users/login">
       <input name="username" type="text" placeholder="Username">
-      <button class="btn waves-effect waves-light" type="submit" name="action">Sign In
-    <i class="material-icons right">send</i>
-  </button>
-
+      <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
     </form>
   <% } %>
 
   <% if (user) { %>
       <h2>Hello, <%= user.name %></h2>
-      <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+      <form method="POST" action="/api/users/logout">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
+      </form>
   <% } %>
+
+
 </nav>
