--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar amber darken-2">
   <h1>GOPS</h1>
 
   <% if (!user) { %>
@@ -14,6 +14,5 @@
         <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
       </form>
   <% } %>
-
 
 </nav>
