Nav-bar styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,8 @@
 
     <% include ./partials/_navbar %>
 
+    <a class="btn-floating btn-large waves-effect waves-light brown darken-3 right"><i class="material-icons">add</i></a>
+
     <section id="game-container">
     </section>
 
