--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,22 +1,34 @@
-body {
-  background-color: #EEE;
-  .navbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 50px 10px;
-    overflow: auto;
-    h1 {
-      color: #212121;
-    }
-    form {
+html {
+  height: 100%;
+  overflow: hidden;
+  body {
+    background-color: #d7ccc8;
+    height: 100%;
+    margin: 0;
+    .navbar {
       display: flex;
       flex-direction: row;
       align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      padding: 50px 10px;
+      overflow: auto;
+      h1 {
+        color: #212121;
+      }
+      form {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
+
     }
-
+    #game-container {
+      background-color: #efebe9;
+      height: 100%;
+      margin: 0 auto;
+      padding: 10px;
+      width: 90%
+    }
   }
-
 }
