--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,18 +1,19 @@
 <nav class="navbar brown lighten-2">
-  <h1>GOPS</h1>
+  <p class="title">GOPS</p>
 
-  <% if (!user) { %>
-    <form method="POST" action="/api/users/login">
-      <input name="username" type="text" placeholder="Username">
-      <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
-    </form>
-  <% } %>
-
-  <% if (user) { %>
-      <h2>Hello, <%= user.name %></h2>
-      <form method="POST" action="/api/users/logout">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
+  
+    <% if (!user) { %>
+      <form method="POST" action="/api/users/login">
+        <input name="username" type="text" placeholder="Username">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
       </form>
-  <% } %>
+    <% } %>
+
+    <% if (user) { %>
+        <p class="intro">Hello, <%= user.name %></p>
+        <form method="POST" action="/api/users/logout">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
+        </form>
+    <% } %>
 
 </nav>
