--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -14,12 +14,13 @@ html {
       overflow: auto;
       padding: 10px 10px;
       width: 100%;
+      .intro {
+        color: #bcaaa4;
+        font-size: 20px;
+      }
       .title {
         color: #212121;
         font-size: 30px
-      }
-      .intro {
-        font-size: 20px;
       }
       form {
         display: flex;
