--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,8 +1,10 @@
 <nav class="navbar brown lighten-2">
   <p class="title">GOPS</p>
 
-  
+  <ul id="slide-out" class="side-nav">
     <% if (!user) { %>
+      <p class="intro">Hello</p>
+      <li><div class="divider"></div></li>
       <form method="POST" action="/api/users/login">
         <input name="username" type="text" placeholder="Username">
         <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
@@ -11,9 +13,12 @@
 
     <% if (user) { %>
         <p class="intro">Hello, <%= user.name %></p>
+        <li><div class="divider"></div></li>
         <form method="POST" action="/api/users/logout">
           <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
         </form>
     <% } %>
+  </ul>
+  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
 </nav>
