--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,19 +1,27 @@
-<nav class="navbar brown lighten-2">
-  <p class="title">GOPS</p>
+<nav class="navbar">
+  <h1>GOPS</h1>
 
-  
-    <% if (!user) { %>
-      <form method="POST" action="/api/users/login">
-        <input name="username" type="text" placeholder="Username">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
+  <ul id="slide-out" class="side-nav">
+
+  <% if (!user) { %>
+    <form method="POST" action="/api/users/login">
+      <input name="username" type="text" placeholder="Username">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
+    </form>
+  <% } %>
+
+  <% if (user) { %>
+      <h2>Hello, <%= user.name %></h2>
+      <form method="POST" action="/api/users/logout">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
       </form>
-    <% } %>
-
-    <% if (user) { %>
-        <p class="intro">Hello, <%= user.name %></p>
-        <form method="POST" action="/api/users/logout">
-          <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
-        </form>
-    <% } %>
+  <% } %>
+  <li>
+    <div class="games-container">
+    ...
+    </div>
+  </li>
+  </ul>
+  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
 </nav>
