--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -9,6 +9,7 @@
         <input name="username" type="text" placeholder="Username">
         <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
       </form>
+      <li><div class="divider"></div></li>
     <% } %>
 
     <% if (user) { %>
@@ -17,6 +18,7 @@
         <form method="POST" action="/api/users/logout">
           <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
         </form>
+        <li><div class="divider"></div></li>
     <% } %>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
