--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/side-nav.js"></script>
+    <script type="text/javascript" src="/scripts/modal.js"></script>
 
   </head>
 
@@ -24,7 +25,7 @@
 
     <% include ./partials/_navbar %>
 
-    <a class="btn-floating btn-large waves-effect waves-light brown darken-3 right"><i class="material-icons">add</i></a>
+    <!-- <a class="btn-floating btn-large waves-effect waves-light brown darken-3 right"><i class="material-icons">add</i></a> -->
 
     <section id="game-container">
 
