--- a/views/gameui.ejs
+++ b/views/gameui.ejs
@@ -1,6 +1,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/cards.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/gameui.css">
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
+<script>
+  $(document).ready( function() {
+
+  });
+</script>
 <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
 <![endif]-->
@@ -13,7 +23,6 @@
   <!-- whole container -->
   <div class="container wrapper">
 
-
     <!-- container-top -->
     <div class="container container-top">
       <!-- opponent -->
@@ -24,16 +33,6 @@
 
         <!-- opponent cards -->
         <div class="playingCards" id="oppHand">
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
-          <div class="card back opponent">*</div>
           <div class="card back opponent">*</div>
           <div class="card back opponent">*</div>
         </div>
@@ -56,27 +55,6 @@
             <ul class="deck">
               <li>
                 <div class="card back ">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
-              </li>
-              <li>
-                <div class="card back">*</div>
               </li>
               <li>
                 <div class="card back">*</div>
@@ -176,7 +154,6 @@
         <div class="clear"></div>
       </div>
     </div>
-
     <!-- /player hand -->
 
     <!-- /player -->
