--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -12,7 +12,7 @@
     <li><div class="divider"></div></li>
 
     <% if (user) { %>
-      <button class="btn wafes-effect waves-light" type="submit"
+      <button class="btn wafes-effect waves-light new-game" type="button"
       name="action">New Game</button>
       <li><div class="divider"></div></li>
       <button class="btn wafes-effect waves-light" type="submit"
