--- a/views/gameui.ejs
+++ b/views/gameui.ejs
@@ -1,16 +1,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/cards.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/gameui.css">
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
-<script>
-  $(document).ready( function() {
-
-  });
-</script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
 <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
 <![endif]-->
@@ -25,6 +17,7 @@
 
     <!-- container-top -->
     <div class="container container-top">
+
       <!-- opponent -->
       <div class="opponent">
 
@@ -151,6 +144,14 @@
             </a>
           </li>
         </ul>
+
+
+
+
+
+
+
+
         <div class="clear"></div>
       </div>
     </div>
