Refactored and improved budget game display.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="/scripts/side-nav.js"></script>
     <script type="text/javascript" src="/scripts/modal.js"></script>
     <script type="text/javascript" src="/scripts/new-game.js"></script>
-    
+
   </head>
 
   <body id="body">
@@ -30,13 +30,16 @@
 
     </section>
 
-    <!-- <script id="game-template" type="text/x-handlebars-template">
+    <script id="game-template" type="text/x-handlebars-template">
       <article class="game" data-game-id="{{game_id}}">
-        <h3>{{created_at}}</h3>
-        <div>You: {{users.0.username}}, Won: {{users.0.won}}</div>
-        <div>Opponent: {{users.1.username}}, Won: {{users.1.won}}</div>
+        <h1>{{game_id}} {{statusDisplay}}</h1>
+        <ul>
+          {{#each users}}
+            <li>{{username}}</li>
+          {{/each}}
+        </ul>
       </article>
-    </script> -->
+    </script>
 
    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
