--- a/views/test.ejs
+++ b/views/test.ejs
@@ -21,9 +21,9 @@ var fakeCard = {
   $( document ).ready( function() {
     console.dir("***Page is loaded. Ready to start loading.", {colors:true});
     createEmptyBoard();
-    generatePlayerCard(fakeCard);
-    createOpponentHand(10);
-    createRemainingPrizes(13);
+    newGame();
+
+
   });
   //render cards...
   // function createPlayingCards()
