--- a/views/gameui.ejs
+++ b/views/gameui.ejs
@@ -13,7 +13,7 @@
 <body>
 
   <!-- whole container -->
-  <div class="container wrapper">
+  <div class="container wrapper board">
 
     <!-- container-top -->
     <div class="container container-top">
