--- a/public/css/gameui.css
+++ b/public/css/gameui.css
@@ -95,7 +95,8 @@ body {
 
 
 #playerHand {
-  margin-left: 80vw;
+  margin: auto;
+  text-align: center;
 }
 
 #tableCards {
@@ -103,18 +104,26 @@ body {
   margin: auto;
 }
 
+#oppHand {
+  margin: auto;
+  text-align: center;
+}
 
 /*GENERAL LAYOUT*/
 
 .board {
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
 }
 
 .container-top {
   top: 0;
   position: relative;
   display: block;
-  padding: 5vh 0 0 10vw;
+  width: 100vw;
+  font-size: 3.5vw;
 }
 
 .container-middle {
@@ -122,14 +131,17 @@ body {
   display: block;
   overflow: visible;
   margin: auto;
-
 }
 
 .container-bottom {
-  position: relative;
-  /*border: 1px solid black;*/
-  overflow: visible;
   bottom: 0;
+  padding-top: 20px;
+  display: block;
+  width: 100vw;
+  font-size: 1.2vw;
+  position: relative;
+  overflow: visible;
+  text-align: center;
 }
 
 .center {
@@ -137,9 +149,12 @@ body {
   /*width: 5vw;*/
   text-align: center;
 }
+
+.right {
+  margin: auto;
+  text-align: right;
+}
 /*/GENERAL LAYOUT*/
-
-
 
 
 
@@ -147,7 +162,6 @@ body {
 .opponentsPlayedCards {
   position: relative;
   display: block;
-  /*padding: 1vh 10vw 0 10vw;*/
   text-align: center;
 }
 
@@ -158,3 +172,41 @@ body {
 }
 
 /*/CONTAINERS FOR CARDS ON THE TABLE*/
+
+
+/* BUTTONS */
+.btn {
+  display: block;
+  font-size: 2.2vh;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 20;
+  -moz-border-radius: 20;
+  border-radius: 20px;
+  text-shadow: 0px 1px 5px #000000;
+  -webkit-box-shadow: 0px 1px 10px #666666;
+  -moz-box-shadow: 0px 1px 10px #666666;
+  box-shadow: 0px 1px 10px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.mystery {
+  border: 1px dashed white;
+}
