--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <title>Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/cards.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/gameui.css">
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
+    <![endif]-->
+    <!--[if IE 9]>
+        <link rel="stylesheet" type="text/css" href="cards-ie9.css" media="screen" />
+    <![endif]-->
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
@@ -20,6 +29,7 @@
     <script type="text/javascript" src="/scripts/modal.js"></script>
     <script type="text/javascript" src="/scripts/new-game.js"></script>
 
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
   </head>
 
   <body id="body">
@@ -29,6 +39,151 @@
     <section id="game-container">
 
     </section>
+      <article class="game card">
+        <!-- whole container -->
+        <div class="container wrapper board">
+
+          <!-- container-top -->
+          <div class="container container-top">
+
+            <!-- opponent -->
+            <div class="opponent">
+
+              <!-- opponent avatar -->
+              <!-- /opponent avatar -->
+
+              <!-- opponent cards -->
+              <div class="playingCards" id="oppHand">
+                <div class="card back opponent">*</div>
+                <div class="card back opponent">*</div>
+              </div>
+              <!-- /opponent cards -->
+            </div>
+            <!-- /opponent -->
+          </div>
+          <!-- /container-top -->
+
+
+          <!-- container-middle -->
+          <div class="container container-middle content">
+
+            <!-- game table -->
+            <div class="oval">
+
+              <!-- cards in play -->
+              <div class="playingCards">
+                <div class="play" id="tableCards">
+                  <ul class="deck">
+                    <li>
+                      <div class="card back ">*</div>
+                    </li>
+                    <li>
+                      <div class="card back">*</div>
+                    </li>
+                    <li>
+                      <div class="card back">*</div>
+                    </li>
+                    <li>
+                      <div class="card back">*</div>
+                    </li>
+                    <li>
+                      <div class="card back">*</div>
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <a class="card rank-2 diams" href="#">
+                        <span class="rank">2</span>
+                        <span class="suit">&diams;</span>
+                      </a>
+                    </li>
+                  </ul>
+                  <ul class="deck">
+                    <li>
+                      <div class="card back">*</div>
+                    </li>
+
+                </div>
+              </div>
+              <!-- /cards in play -->
+
+            </div>
+            <!-- /game table -->
+          </div>
+          <!-- /container-middle -->
+
+          <!-- player -->
+          <!-- player hand -->
+          <div class="container container-bottom">
+            <div class="playingCards rotateHand">
+              <ul class="hand" id="playerHand">
+                <li>
+                  <a class="card rank-7 diams" href="#">
+                    <span class="rank">7</span>
+                    <span class="suit">&diams;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-8 hearts" href="#">
+                    <span class="rank">8</span>
+                    <span class="suit">&hearts;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-8 spades" href="#">
+                    <span class="rank">8</span>
+                    <span class="suit">&spades;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-10 clubs" href="#">
+                    <span class="rank">10</span>
+                    <span class="suit">&clubs;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-j diams" href="#">
+                    <span class="rank">J</span>
+                    <span class="suit">&diams;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-5 clubs" href="#">
+                    <span class="rank">5</span>
+                    <span class="suit">&clubs;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-6 diams" href="#">
+                    <span class="rank">6</span>
+                    <span class="suit">&diams;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-q hearts" href="#">
+                    <span class="rank">Q</span>
+                    <span class="suit">&hearts;</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="card rank-k spades" href="#">
+                    <span class="rank">K</span>
+                    <span class="suit">&spades;</span>
+                  </a>
+                </li>
+              </ul>
+
+              <div class="clear"></div>
+            </div>
+          </div>
+          <!-- /player hand -->
+
+          <!-- /player -->
+
+        </div>
+        <!-- /whole container -->
+
+      </article>
 
     <script id="game-template" type="text/x-handlebars-template">
       <article class="game card" data-game-id="{{game_id}}">
