Added socket hello world.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
 
     <script type="text/javascript" src="/navbar.js"></script>
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="/vendor/socket.io.min.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/side-nav.js"></script>
     <script type="text/javascript" src="/scripts/modal.js"></script>
