--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Home Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/cards.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/cards.css">
     <link rel="stylesheet" type="text/css" href="css/gameui.css">
     <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
@@ -37,109 +37,89 @@
     <section id="game-container">
 
     </section>
-      <script id="active-game-template" type="text/x-handlebars-template">
-        <!-- <article class="game card"> -->
-          <!-- whole container -->
-          <div class="container wrapper board" data-game-id={{game_id}}>
+    
+    <script id="active-game-template" type="text/x-handlebars-template">
+      <!-- whole container -->
+      <div class="container wrapper board" data-game-id={{game_id}}>
 
-            <!-- container-top -->
-            <div class="container container-top">
+      <!-- TOP OF THE BOARD -->
+        <div class='container container-top'>
+          <div class='opponent'>
+            <div class='playingCards inText' id='oppHand'>
+            </div> <!-- oppHand -->
+          </div> <!-- /opponent -->
+        </div> <!-- /top -->
 
-              <!-- opponent -->
-              <div class="opponent">
-
-                <!-- opponent avatar -->
-                <!-- /opponent avatar -->
-
-                <!-- opponent cards -->
-                <div class="playingCards" id="oppHand">
-                  <div class="card back opponent">*</div>
-                  <div class="card back opponent">*</div>
-                </div>
-                <!-- /opponent cards -->
-              </div>
-              <!-- /opponent -->
-            </div>
-            <!-- /container-top -->
+      
+        <!-- MIDDLE OF THE BOARD -->
+        <div class='container container-middle content'>
+          <div class='oval center'>
 
 
-            <!-- container-middle -->
-            <div class="container container-middle content">
+          <!-- MIDDLE OF THE TABLE -->
+            <div class='playingCards'>
 
-              <!-- game table -->
-              <div class="oval">
 
-                <!-- cards in play -->
-                <div class="playingCards">
-                  <div class="play" id="tableCards">
-                    <ul class="deck">
-                      <li>
-                        <div class="card back ">*</div>
-                      </li>
-                      <li>
-                        <div class="card back">*</div>
-                      </li>
-                      <li>
-                        <div class="card back">*</div>
-                      </li>
-                      <li>
-                        <div class="card back">*</div>
-                      </li>
-                      <li>
-                        <div class="card back">*</div>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li>
-                        <a class="card rank-{{currentTurn.prize}} diams" href="#">
-                          <span class="rank">{{currentTurn.prize}}</span>
-                          <span class="suit">&diams;</span>
-                        </a>
-                      </li>
-                    </ul>
-                    <ul class="deck">
-                      <li>
-                        <div class="card back">*</div>
-                      </li>
+              <!-- OPPONENTS PLAYED CARD -->
+              <div class='opponentsPlayedCards center'>
+                <div class='playingCards simpleCards'>
 
+                  <div class='card mystery'> <!-- BLANK CARD **** TODO:REMOVE -->
+                    <span class='rank'>?</span>
+                    <span class='suit'></span>
                   </div>
+
+
                 </div>
-                <!-- /cards in play -->
-
               </div>
-              <!-- /game table -->
-            </div>
-            <!-- /container-middle -->
+              <!-- /OPPONENTS PLAYED CARD -->
 
-            <!-- player -->
-            <!-- player hand -->
-            <div class="container container-bottom">
-              <div class="playingCards rotateHand">
-                <ul class="hand" id="playerHand">
-                {{#list game_state.users.0.cardsInHand}}
-                  <li>
-                    <a class="card rank-{{card}} diams" href="#" data-card-to-play={{card}}>
-                      <span class="rank">{{card}}</span>
-                      <span class="suit">&diams;</span>
-                    </a>
-                  </li>
-                {{/list}}
-                </ul>
 
-                <div class="clear"></div>
-              </div>
-            </div>
-            <!-- /player hand -->
+              <!-- PRIZE CARDS -->
 
-            <!-- /player -->
-          <h1>{{game_id}}</h1>
+              <div class='play' id='tableCards simpleCards'>
 
+                <!-- PRIZE CARDS -->
+                <div class='prizeContainer'>
+                  <ul class='deck' id='prizeCards'></ul>
+                </div>
+
+                <!-- Code Eric created - as an example of using handle-bars. -->
+                      <ul>
+                        <li>
+                          <a class="card rank-{{currentTurn.prize}} diams" href="#">
+                            <span class="rank">{{currentTurn.prize}}</span>
+                            <span class="suit">&diams;</span>
+                          </a>
+                        </li>
+                      </ul>
+
+
+                <!-- PLAYER PLAYED CARD -->
+                <ul id='playerPlayedCards'></ul>
+                <!-- /PLAYER PLAYED CARD -->
+
+              </div> <!-- playing cards in the center -->
+            </div> <!-- table cards -->
+          </div> <!-- oval -->
+        </div> <!-- middle -->
+       
+        <!-- BOTTOM -->
+        <div class='container container-bottom'>
+
+          <div class='playingCards simpleCards' id='playerHand'>
+          {{#list game_state.users.0.cardsInHand}}
+            <a class="card rank-{{card}} diams" href="#" data-card-to-play={{card}}>
+              <span class="rank">{{card}}</span>
+              <span class="suit">&diams;</span>
+            </a>
+          {{/list}}
           </div>
-          <!-- /whole container -->
+        </div>
 
-        <!-- </article> -->
+      </div>  <!-- WHOLE CONTAINER -->
 
-      </script>
+    </script>
 
     <script id="game-template" type="text/x-handlebars-template">
       <article class="game card" data-game-id="{{game_id}}">
