Stats modal working properly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,6 +143,10 @@
 
       </script>
 
+    <!-- <script id="stats-template" type="text/x-handlebars-template">
+
+    </script> -->
+
     <script id="game-template" type="text/x-handlebars-template">
       <article class="game card" data-game-id="{{game_id}}">
         <!-- <button class="btn waves-effect waves-light close-game" type="submit" name="action">Submit
