--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -15,7 +15,7 @@
       <button class="btn wafes-effect waves-light new-game" type="button"
       name="action">New Game</button>
       <li><div class="divider"></div></li>
-      <button class="btn wafes-effect waves-light" type="submit"
+      <button class="btn wafes-effect waves-light get-stats" type="button"
       name="action" data-target="modal1">Your Stats</button>
     <% } %>
 
@@ -39,17 +39,21 @@
 
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
-  <div id="modal1" class="modal modal-fixed-footer">
-    <div class="modal-content">
-      <p class="title-modal">Stats</p>
-      <p class="stats">Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
-
-      My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?
-      </p>
+    <div id="modal1" class="modal modal-fixed-footer">
+      <div class="modal-content">
+        <p class="title-modal">Stats</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat thanks">Thanks,</a>
+      </div>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Thanks,</a>
-    </div>
-  </div>
 
 </nav>
+
+<script id="stats-template" type="text/x-handlebars-template">
+  <div class="stats">
+    <li>Games Played: {{total_played}}</li>
+    <li>Wins: {{wins}}</li>
+    <li>Losses: {{losses}}</li>
+  </div>
+</script>
