--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -12,24 +12,24 @@
     <li><div class="divider"></div></li>
 
     <% if (user) { %>
-      <button class="btn wafes-effect waves-light new-game" type="button"
+      <button class="btn wafes-effect waves-light new-game btn-nav" type="button"
       name="action">New Game</button>
       <li><div class="divider"></div></li>
-      <button class="btn wafes-effect waves-light get-stats" type="button"
+      <button class="btn wafes-effect waves-light get-stats btn-nav" type="button"
       name="action" data-target="modal1">Your Stats</button>
     <% } %>
 
     <% if (user) { %>
       <li><div class="divider"></div></li>
       <form class="form" method="POST" action="/api/users/logout">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Sign Out</button>
+        <button class="btn waves-effect waves-light btn-nav" type="submit" name="action">Sign Out</button>
       </form>
     <% } %>
 
     <% if (!user) { %>
       <form class="form" method="POST" action="/api/users/login">
-        <input name="username" type="text" placeholder="Username">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Sign In</button>
+        <input class="username" name="username" type="text" placeholder="Username">
+        <button class="btn waves-effect waves-light btn-nav" type="submit" name="action">Sign In</button>
       </form>
     <% } %>
 
