--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -50,15 +50,15 @@ html {
     }
     #game-container {
       background-color: #efebe9;
-      height: 100%;
-      margin: 0 auto;
-      padding: 10px;
-      width: 90%;
+      // height: 100%;
+      // margin: 0 auto;
+      // padding: 10px;
+      // width: 90%;
       .game {
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
         background-color: white;
-        position: relative;
+        // position: relative;
         min-height: 20vh;
         .game-close {
           background-color: red;
@@ -66,15 +66,15 @@ html {
         .game-card-body {
           min-height: 10vh;
         }
-        span {
-          position: absolute;
-          right:0;
-          bottom:0;
-          padding: 10px;
-        }
-        div {
-          display: flex;
-        }
+        // span {
+        //   position: absolute;
+        //   right:0;
+        //   bottom:0;
+        //   padding: 10px;
+        // }
+        // div {
+        //   display: flex;
+        // }
         .close-game {
           position: absolute;
           background-color: blue;
