--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -16,7 +16,9 @@ html {
       justify-content: space-between;
       overflow: auto;
       padding: 10px 10px;
+      // position: fixed;
       width: 100%;
+      // z-index: 996;
       .btn-nav {
         width: 145px;
       }
