--- a/views/partials/_game_v2.ejs
+++ b/views/partials/_game_v2.ejs
@@ -22,8 +22,44 @@
               </span>
 
 
-          </div>
-        {{/list}}
+
+        <!-- <table class="bordered">
+          <thread>
+            <tr>
+              <th data-field="id">Player 1</th>
+              <th data-field="id">Player 2</th>
+              <th data-field="prize">Prize</th>
+            </tr>
+          </thread>
+
+          <tbody>
+            <tr> -->
+              <!-- <td>{{users.0.username}}</td> -->
+              <!-- <td>
+                <span class="card rank-{{card0}} {{card0Suit}}" href=#>
+                  <span class="rank">{{card0}}</span>
+                  <span class="suit">&{{card0Suit}};</span>
+                </span>
+              </td> -->
+              <!-- <td>{{users.1.username}}</td> -->
+              <!-- <td>
+                <span class="card rank-{{card1}} {{card1Suit}}" href=#>
+                  <span class="rank">{{card1}}</span>
+                  <span class="suit">&{{card1Suit}};</span>
+                </span>
+              </td>
+              <td>
+                <span class="card rank-{{prize}} {{prizeSuit}}" href=#>
+                  <span class="rank">{{prize}}</span>
+                  <span class="suit">&{{prizeSuit}};</span>
+                </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div> -->
+
+      {{/list}}
 
         <div class="flow-text">
           <a class="card rank-{{currentTurn.cardsPlayed.0.card}} {{currentTurn.cardsPlayed.0.suit}}" href="#">
