--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -50,14 +50,15 @@ html {
     }
     #game-container {
       background-color: #efebe9;
-      // height: 100%;
-      // margin: 0 auto;
-      // padding: 10px;
-      // width: 90%;
+      height: 100%;
+      margin: 0 auto;
+      padding: 10px;
+      width: 90%;
       .game {
         // display: flex;
         // flex-direction: column;
         background-color: white;
+        padding: 10px;
         // position: relative;
         min-height: 20vh;
         .game-close {
