Added close button to active games.  Applied the rest of the game styling.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         <!-- <button class="btn waves-effect waves-light close-game" type="submit" name="action">Submit
           <i class="material-icons right">send</i>
         </button> -->
-        <button class="modal-close btn game-close" style="position:absolute;top:0;right:0;">ABANDON</button>
+        <button class="modal-close btn game-close" style="position:absolute;bottom:0;right:0;">ABANDON</button>
 
         <div class="game-card-header">
           <h4>Game Status: {{statusDisplay}}</h4>
