--- a/views/partials/_game_v2.ejs
+++ b/views/partials/_game_v2.ejs
@@ -1,5 +1,5 @@
 <script id="active-game-template" type="text/x-handlebars-template">
-  <div class="container game card" data-game-id={{game_id}}>
+  <div class="game card" data-game-id={{game_id}}>
     <div class="row">
       <div class="col s2" id="prizeCards">
         <div class="flow-text">{{users.0.username}}</div>
@@ -75,7 +75,7 @@
       <div class="col s6">
       </div>
       <div class="s2">
-        <a class="btn game-close">close</a>
+        <a class="modal-close btn game-close" style="position:absolute;bottom:0;right:0;">close</a>
       </div>
     </div>
 
